Add real web scraping system
- Created live_scraper.py that actually scrapes football websites
- Scrapes 90minut.pl for transfer news articles
- Scrapes Transfermarkt.pl for official transfer data
- Scrapes Ekstraklasa.org for official league transfers
- Uses BeautifulSoup for reliable HTML parsing
- Includes proper rate limiting and error handling
- Updated GitHub Actions to install dependencies
- Will run daily at 8:00 AM Poland time
- Filters for real Ekstraklasa teams only
- Removes duplicates and sorts by date
- Returns only recent transfers (last 90 days)

--- a/.github/workflows/update-transfers.yml
+++ b/.github/workflows/update-transfers.yml
@@ -23,9 +23,13 @@ jobs:
       with:
         python-version: '3.9'
     
-    - name: Run scraper
+    - name: Install dependencies
       run: |
-        python3 real_scraper.py
+        pip install requests beautifulsoup4 lxml
+    
+    - name: Run real scraper
+      run: |
+        python3 live_scraper.py
         
     - name: Update HTML with new data
       run: |
